fix:  - fixed loan name position when it's short

--- a/styles/_confirmLoan.scss
+++ b/styles/_confirmLoan.scss
@@ -43,6 +43,8 @@
         @include theme-aware("color", "collateral-name");
         font-weight: 700;
         line-height: 21px;
+        width: 100%;
+        text-align: center;
       }
     }
   }
