Feat/slider npm (#169)
* chosen slider

* managed to make it partially work

* css

* Wrap Slider inside Field

* Math utility functions

No unexpected side-effects

* refactor: move state within final-form

Since we're already using final-form, it makes sense to keep all the form state within it, and delegate the calculations for shifting values to it

* fixes

* refactor: continued

* refactor: formatting options

* refactor: extract 3rd party components, remove mutators

* This is causing weird validation errors, dunno how to fix it

* Restore submit functionality

* refactor: removed duplicated error handling

* refactor: fewer loc

* fix: partially revert this change

A lot of methods set slightly different min/max fractional digits. I still think we should just use the same everywhere

* unused code

* refactor: move calculateRepayValue to loan math utils

* remove the test page

* :)

Co-authored-by: Hoxton <igorkalicinski@gmail.com>

--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -332,3 +332,39 @@
   padding-bottom: 40px;
   @include theme-aware("color", "color-label");
 }
+
+.rc-slider {
+  width: 100% !important;
+}
+.rc-slider-track {
+  -webkit-appearance: none;
+  width: 100% !important;
+  height: 7px !important;
+  @include theme-aware("background-color", "lightbox-range-bg");
+  border-radius: 5px;
+  background-size: 70% 100%;
+  background-repeat: no-repeat;
+  margin-top: 2px;
+}
+
+.rc-slider-handle {
+  -webkit-appearance: none;
+  height: 20px !important;
+  width: 20px !important;
+  border-radius: 50%;
+  @include theme-aware("background-color", "color-primary");
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #555;
+  transition: background 0.3s ease-in-out;
+  border: 0px !important;
+  opacity: 1 !important;
+  box-shadow: none !important;
+}
+
+.rc-slider-handle:hover {
+  @include theme-aware("background-color", "color-primary");
+}
+
+.rc-slider-rail {
+  opacity: 0 !important;
+}
