--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -3,6 +3,7 @@ $themes: (
     color-white: #fff,
     color-background: #ebe8fa,
     color-primary: #e00a7f,
+    button-border-primary: 1px solid #e00a7f,
     color-primary-dark: #ad1468,
     color-secondary: #2e13d2,
     color-secondary-dark: #24119a,
@@ -155,6 +156,7 @@ $themes: (
     color-white: #fff,
     color-background: #210d48,
     color-primary: #e00a7f,
+    button-border-primary: 1px solid #e00a7f,
     color-primary-dark: #ad1468,
     color-secondary: #9e6cff,
     color-secondary-dark: #6c48b4,
