New Circular Loading (#177)
* Init

* splitted circle loading component to lihtbox and circle

* finishing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,6 +27,7 @@
 @import "./solscanExplorer";
 @import "./popups";
 @import "./circularProgressBar";
+@import "./circleLoader";
 
 @import "./singleOffer/header";
 @import "./singleOffer/offer";
