base vote structure done

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,6 +40,8 @@
 @import "./myOffers/myOffersTop";
 @import "./myOffers/myOffersNftList";
 
+@import "./voting/votingPage";
+
 @import "./lightboxBase";
 @import "./NFTCollateral";
 @import "./createLoan";
