--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -151,6 +151,15 @@ $themes: (
     circular-progress-emptyLine-bgcolor: #2f175d,
     circular-progress-color: #ffffff,
     purple-light: #9e6cff,
+
+    voting-power-bg: rgba(66, 34, 128, 0.4),
+    voting-distribution-bg: #482688,
+    voting-color: #ffffff,
+    voting-color1: #d2ca02,
+    voting-color2: #d202b1,
+    voting-color3: #0262d2,
+    voting-color4: #02d2d2,
+    voting-color5: #1fd202,
   ),
   dark: (
     color-white: #fff,
@@ -304,5 +313,14 @@ $themes: (
     circular-progress-emptyLine-bgcolor: #2f175d,
     circular-progress-color: #ffffff,
     purple-light: #9e6cff,
+
+    voting-power-bg: rgba(66, 34, 128, 0.4),
+    voting-distribution-bg: #482688,
+    voting-color: #ffffff,
+    voting-color1: #d2ca02,
+    voting-color2: #d202b1,
+    voting-color3: #0262d2,
+    voting-color4: #02d2d2,
+    voting-color5: #1fd202,
   ),
 );
