created vote lightbox

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -155,11 +155,7 @@ $themes: (
     voting-power-bg: rgba(66, 34, 128, 0.4),
     voting-distribution-bg: #482688,
     voting-color: #ffffff,
-    voting-color1: #d2ca02,
-    voting-color2: #d202b1,
-    voting-color3: #0262d2,
-    voting-color4: #02d2d2,
-    voting-color5: #1fd202,
+    voting-separator: #9e6cfe,
   ),
   dark: (
     color-white: #fff,
@@ -317,10 +313,6 @@ $themes: (
     voting-power-bg: rgba(66, 34, 128, 0.4),
     voting-distribution-bg: #482688,
     voting-color: #ffffff,
-    voting-color1: #d2ca02,
-    voting-color2: #d202b1,
-    voting-color3: #0262d2,
-    voting-color4: #02d2d2,
-    voting-color5: #1fd202,
+    voting-separator: #9e6cfe,
   ),
 );
