Feat/liquidity mining (#178)
* fixed UI on main page according to liquidity minind design and desing in general

* fixed markup position of  button

* small refactoring

* correct names for myOffers components and paths

* correct names for myOffers components and minor refactoring

* WIP: moved loan items to active offers tab, removed 'Loans given' page

* WIP: created new markup for universal offer item component

* WIP: active Loans: Lends mammed correctly but Borrows not

* WIP: applied UI and data to Active and Personal offers

* WIP: refactored UI is dynamic

* WIP: filled with functionality

* WIP: removed useless components

* WIP: bug fixed, refactored data structure, fixing linter errors

* WIP: removed useless SCSS file

* WIP: Unclaimed Tokens and Reward APR left

* WIP: fixed lightboxes layout and UI according to design

* WIP: fixed light theme

* WIP: fixed UI at smaller screens

* WIP: fixed vercel build fail

* WIP: fixed some UI issues on mobile screens

* removed components/loans-given/loansList.tsx

* removed useless loansList.tsx

* Memoized mapping of OfferTemplate

* Fixed some UI issues

* Fixed borrows red status color

* fixed a bit tone of red color

* Fixed elements positioning at mobile version of header

* fixed walled dropdown position

--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -145,8 +145,8 @@
 
 .sort-select {
   @include theme-aware("color", "lightbox-collection-select-color");
-  border: 0;
-  border-radius: 2px;
+  border-color: transparent;
+  border-radius: 19px;
   width: 200px;
   font-size: $tp-lg;
   appearance: none;
