--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -20,7 +20,7 @@
 
 .wallet-adapter-button-trigger {
   @include theme-aware("color", "color-white");
-  background-color: #512da8;
+  @include theme-aware("background-color", "toaster-bg");
 }
 
 .wallet-adapter-button:not([disabled]):focus-visible {
@@ -64,6 +64,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  direction: initial;
 }
 
 .wallet-adapter-dropdown-list {
