--- a/styles/singleOffer/_acceptOffer.scss
+++ b/styles/singleOffer/_acceptOffer.scss
@@ -90,13 +90,34 @@
     }
   }
 
+  .rewards {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 15px;
+
+    span {
+      margin-bottom: 9px;
+    }
+    & > * {
+      text-align: center;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+    }
+    b {
+      margin: 0 4px;
+    }
+  }
+
   .btn {
     @media (min-width: $bp-tablet) {
       width: 255px;
     }
     justify-content: center;
     border-radius: 5px;
-    margin: $tp-xl auto 0;
+    margin: 15px auto 0;
   }
 }
 
