--- a/styles/singleOffer/_page.scss
+++ b/styles/singleOffer/_page.scss
@@ -6,7 +6,7 @@
 
 .offer-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 30px;
 
   @media (max-width: $bp-tablet) {
