--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -1,8 +1,8 @@
 .offer-root--add-new {
   @include theme-aware("background", "yourNFT-offer-bg");
   cursor: pointer;
-  height: 200px;
-  width: 406px;
+  height: 258.5px;
+  width: 100%;
   border-radius: $brd-rds-2tn;
   box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.15);
   display: flex;
