Almost finished voting lightbox
 one decorator bug left to fix, tried all day to fix it

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,6 +45,7 @@
 @import "./myOffers/myOffersWrap";
 
 @import "./voting/votingPage";
+@import "./voting/voteLightbox";
 
 @import "./lightboxBase";
 @import "./NFTCollateral";
