Freeze contract update (#184)
* Init changes

* Remove console log in nftLoan

* Update nft integration

* Update global data

* fix: state offset

* change the defaults to work on devnet

* fix: cancel collateral

* wip: create and cancel offers (deposit)

* wip: create suboffer, cancel suboffer

* wip: create/cancel suboffers, display front page suboffers

* fix: frontpage

* Change many things

* fix: build errors

* fix: update packags, accepted offers

* fix: transaction helpers

* Remove types directory

* feat: some error handling

* remove anchor dependancy in a few places

* Update web3, useSendTransaction hook

* fix: math when converting ui number to big number

* speed up spinner, remove unused code

* fix: eslint

* removed unused package

Co-authored-by: John Wilhelmsson <81255184+jwtradera@users.noreply.github.com>

--- a/styles/_toasters.scss
+++ b/styles/_toasters.scss
@@ -2,8 +2,12 @@
   --toastify-icon-color-success: #00d756;
 }
 
+.Toastify__toast-container {
+  width: 460px;
+}
+
 .Toastify__toast {
-  border-radius: $brd-rds-1md;
+  border-radius: $brd-rds-sm;
   padding: 15px 6% 40px 6%;
 }
 
