wip: create stake account lightbox & handler

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,7 @@
 @import "./profilePage/header";
 @import "./profilePage/page";
 @import "./profilePage/stakerow";
+@import "./profilePage/create";
 
 @import "./lightboxBase";
 @import "./NFTCollateral";
