--- a/styles/profilePage/_header.scss
+++ b/styles/profilePage/_header.scss
@@ -86,7 +86,9 @@
 
         .button--circle {
           color: #fff;
-          background-color: #2e13d2;
+          @include theme-aware("border-color", "color-primary");
+          @include theme-aware("color", "color-primary");
+          border: 2px solid;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -95,7 +97,6 @@
           font-size: 60px;
           cursor: pointer;
           border-radius: 50%;
-          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         }
       }
     }
