feat: skeleton loader (pulse) for DepositNFT lightbox

--- a/styles/mobile/_lightboxBaseMobile.scss
+++ b/styles/mobile/_lightboxBaseMobile.scss
@@ -16,6 +16,13 @@
     max-height: 60%;
     overflow-y: scroll;
     margin-bottom: 80px;
+
+    &.skeleton {
+      .collateral-list-item {
+        @include theme-aware("background-color", "color-primary");
+        animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      }
+    }
   }
 
   .collateral-lightbox {
@@ -41,5 +48,11 @@
   }
   .lightbox-processing {
     margin: auto;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
   }
 }
