--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -47,7 +47,16 @@
   grid-gap: 20px;
   max-height: 500px;
   overflow-y: auto;
-  padding-right: 20px;
+  //padding-right: 20px;
+
+  &.skeleton {
+    .collateral-list-item {
+      width: 100%;
+      height: 98px;
+      @include theme-aware("background-color", "color-accent");
+      animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+    }
+  }
 
   &::-webkit-scrollbar {
     width: 12px;
@@ -177,5 +186,11 @@
 .collateral-loading {
   h2 {
     text-align: center;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
   }
 }
