fix: skeleton loader color (pulse) for DepositNFT lightbox, removed unnecessary @keyframe duplications

--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -53,8 +53,9 @@
     .collateral-list-item {
       width: 100%;
       height: 98px;
-      @include theme-aware("background-color", "color-accent");
+      @include theme-aware("background-color", "color-accentDim");
       animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      border: none;
     }
   }
 
@@ -186,11 +187,5 @@
 .collateral-loading {
   h2 {
     text-align: center;
-  }
-}
-
-@keyframes pulse {
-  50% {
-    opacity: 0.5;
   }
 }
