Feat/skeleton loaders (#189)
* feat: skeleton loader (pulse) for grid and table view modes

* feat: skeleton loader (pulse) for DepositNFT lightbox

* fix: skeleton loader color (pulse) for DepositNFT lightbox, removed unnecessary @keyframe duplications

* feat: skeleton loader for My Offers page.
fix: fix loading phase for some elements

* removed unnecessary components and commented lines

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -192,3 +192,15 @@ a {
 .overflow-hidden {
   overflow: hidden;
 }
+
+.no-offers {
+  width: 100%;
+  text-align: center;
+  margin: 80px 0;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
+  }
+}
