--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -8,17 +8,22 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 
+  &.skeleton {
+    .offers-grid-item {
+      box-shadow: unset;
+      -moz-box-shadow: unset;
+
+      @include theme-aware("background-color", "color-accent");
+
+      animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+    }
+  }
+
   &--empty {
     width: 100%;
     display: flex;
     justify-content: center;
     text-align: center;
-
-    .no-offers {
-      width: 100%;
-      text-align: center;
-      margin: 80px 0;
-    }
   }
 
   .offers-empty {
