--- a/styles/_circularProgressBar.scss
+++ b/styles/_circularProgressBar.scss
@@ -1,47 +1,27 @@
-.circular-progress-bar {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  margin: 10px;
-
-  &__info {
-    transform: rotate(-90deg);
-    width: 62px;
-    height: 62px;
-    @include theme-aware("background-color", "circular-progress-label-bgcolor");
-    @include theme-aware("color", "circular-progress-color");
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    .info--value {
-      font-size: $tp-md;
-      font-weight: $wg-hv;
-      margin-bottom: 5px;
-    }
-
-    .info--label {
-      font-size: $tp-sm;
-    }
-  }
-
-  &__circle {
-    @include theme-aware("background-color", "circular-progress-line-bgcolor");
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: rotate(90deg);
-  }
+// Overriding defaults
+// I'm using multiple classes to increase specificity
+.CircularProgressbar-path.CircularProgressbar-path.CircularProgressbar-path {
+  stroke: #e0097e;
+}
+.CircularProgressbar .CircularProgressbar-trail {
+  @include theme-aware("stroke", "radial-progress-track");
 }
 
-@for $i from 1 through 360 {
-  .progress-#{$i} {
-    background-image: linear-gradient(0deg, #2f175d 50%, transparent 50%),
-      linear-gradient($i + deg, transparent 50%, #2f175d 50%);
+.CircularProgressbar .CircularProgressbar-text {
+  @include theme-aware("fill", "circular-progress-color");
+}
+
+.stakerow__progress .duration-text {
+  margin-top: -5px;
+  text-align: center;
+  cursor: default;
+
+  & .days {
+    font-size: $tp-2md;
+    font-weight: $wg-hv;
+  }
+
+  & .label {
+    font-size: $tp-sm;
   }
 }
