--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -5,6 +5,7 @@ $themes: (
     color-primary: #e00a7f,
     text-primary-color: #210d48,
     button-border-primary: 1px solid #e00a7f,
+    button-disabled: #a192ce,
     color-primary-dark: #ad1468,
     color-secondary: #2e13d2,
     color-secondary-dark: #24119a,
@@ -138,6 +139,7 @@ $themes: (
     yourNFT-offer-plus-color: #2e13d1,
 
     profile-separator: #e4dbf8,
+    radial-progress-track: #e4dbf8,
 
     bg-gradient-home: linear-gradient(194.54deg, #e0d0ff -44.32%, rgba(150, 97, 255, 0.06) 44.37%),
     icon-theme-moon: url("/icons/theme-moon-icon-light.svg"),
@@ -195,6 +197,7 @@ $themes: (
     color-primary: #e00a7f,
     text-primary-color: #fff,
     button-border-primary: 1px solid #e00a7f,
+    button-disabled: #3c2669,
     color-primary-dark: #ad1468,
     color-secondary: #9e6cff,
     color-secondary-dark: #6c48b4,
@@ -328,6 +331,7 @@ $themes: (
     yourNFT-offer-plus-color: #ffffff,
 
     profile-separator: #6743aa,
+    radial-progress-track: #2f175d,
 
     bg-gradient-home: linear-gradient(193deg, rgb(45, 20, 119) 20.33%, rgba(33, 13, 72, 0) 59.11%),
     icon-theme-moon: url("/icons/theme-moon-icon-dark.svg"),
