wip: updated hooks and some styles

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -10,6 +10,7 @@ $themes: (
     color-secondary: #2e13d2,
     color-secondary-dark: #24119a,
     color-accent: #b4ace2,
+    color-accentHover: #b0a6e7,
     color-accentDim: #eae7fb,
     color-accentDark: #ffffff,
     color-content: #210d48,
@@ -201,7 +202,8 @@ $themes: (
     color-primary-dark: #ad1468,
     color-secondary: #9e6cff,
     color-secondary-dark: #6c48b4,
-    color-accent: #482688,
+    color-accent: hsl(261, 56%, 34%),
+    color-accentHover: hsl(261, 66%, 34%),
     color-accentDim: #402a6b,
     color-accentDark: #13072b,
     color-content: #ffffff,
