--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -362,14 +362,13 @@
   @include theme-aware("color", "color-label");
 }
 
-.rc-slider {
-  width: 100% !important;
+.rc-slider.rc-slider {
+  width: 100%;
 }
 .rc-slider-track {
   -webkit-appearance: none;
-  width: 100% !important;
-  height: 7px !important;
-  @include theme-aware("background-color", "lightbox-range-bg");
+  height: 6px !important;
+  @include theme-aware("background-color", "color-primary");
   border-radius: 5px;
   background-size: 70% 100%;
   background-repeat: no-repeat;
@@ -395,5 +394,5 @@
 }
 
 .rc-slider-rail {
-  opacity: 0 !important;
+  @include theme-aware("background-color", "lightbox-range-bg");
 }
