--- a/styles/profilePage/_header.scss
+++ b/styles/profilePage/_header.scss
@@ -1,5 +1,9 @@
 .profile {
   &__level {
+    @media (max-width: $bp-phone) {
+      order: 2;
+      width: 100%;
+    }
     gap: $mr-md;
     display: flex;
     padding: $mr-2rem;
@@ -65,6 +69,13 @@
       height: 100%;
     }
   }
+  @media (max-width: $bp-phone) {
+    order: 1;
+    &__actions {
+      width: 100%;
+      flex-direction: column;
+    }
+  }
 
   &__plus,
   &__buttons {
@@ -74,36 +85,49 @@
   &__plus {
     padding: $mr-2rem $mr-lg;
 
+    .title {
+      display: block;
+      font-weight: $wg-hv;
+      text-align: center;
+    }
     .add-new {
       display: flex;
       justify-content: center;
       align-items: center;
       margin-top: $mr-sm;
+      background-color: transparent;
 
-      button {
-        border: none;
+      .button--plus {
+        outline: inherit;
         background-color: transparent;
+        @media (max-width: $bp-phone) {
+          width: 100%;
+        }
+        color: #fff;
+        @include theme-aware("border-color", "color-primary");
+        @include theme-aware("color", "color-primary");
+        border: 3px solid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 64px;
+        height: 64px;
+        font-size: 60px;
+        cursor: pointer;
+        border-radius: 50%;
+        transition: color 0.1s ease-in-out;
+        transition: border-color 0.1s ease-in-out;
 
-        .button--circle {
-          color: #fff;
-          @include theme-aware("border-color", "color-primary");
-          @include theme-aware("color", "color-primary");
-          border: 3px solid;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 64px;
-          height: 64px;
-          font-size: 60px;
-          cursor: pointer;
-          border-radius: 50%;
-          transition: color 0.15s ease-in-out;
-          transition: border-color 0.15s ease-in-out;
+        @media (max-width: $bp-phone) {
+          width: 100%;
+          border-radius: $brd-rds-2tn;
+          height: unset;
+          font-size: 36px;
+        }
 
-          &:hover {
-            @include theme-aware("border-color", "color-primary-dark");
-            @include theme-aware("color", "color-primary-dark");
-          }
+        &:hover {
+          @include theme-aware("border-color", "color-primary-dark");
+          @include theme-aware("color", "color-primary-dark");
         }
       }
     }
@@ -115,10 +139,22 @@
     justify-content: space-around;
     padding: $mr-2rem $mr-lg;
 
+    @media (max-width: $bp-phone) {
+      flex-direction: row;
+      gap: 1rem;
+    }
+
     .btn {
+      display: inline-flex;
       border-radius: $brd-rds-2tn;
       min-width: 216px;
-      display: flex;
+      @media (max-width: $bp-phone) {
+        min-width: auto;
+        flex: 1 0 0;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: initial;
+      }
       justify-content: center;
 
       &:nth-child(2) {
@@ -128,6 +164,9 @@
   }
 
   &__balance {
+    @media (max-width: $bp-phone) {
+      order: 3;
+    }
     padding: $mr-2rem $mr-lg;
     @include theme-aware("color", "color-content");
     display: flex;
@@ -195,5 +234,9 @@
         }
       }
     }
+  }
+
+  &__summary {
+    margin-top: $mr-sm;
   }
 }
